--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 footer {
   background-color: #EDEEEF;
 }
@@ -583,6 +584,40 @@ header li a {
   margin-top: -33px;
 }
 
+#rates .country-delivery {
+  display: flex;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+#rates .country-rates {
+  position: absolute;
+  z-index: 110;
+}
+#rates .country-img {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../../images/310936676_705737237436043_263632807180029271_n.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position:  relative;
+}
+#rates .input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 2.5rem;
+}
+#rates label {
+  margin-left: 1rem;
+}
+#rates h2 {
+  font-size: 3rem;
+}
+#rates p {
+  font-size: 1.2rem;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -625,7 +660,7 @@ footer {
   font-weight: 500;
 }
 
-.header-backround-pages {
+.universal-backround {
   background-color: #F5F5F5;
 }
 
