--- a/assets/scss/partial/rates/rates.css
+++ b/assets/scss/partial/rates/rates.css
@@ -1,21 +1,19 @@
-@charset "UTF-8";
 #rates .country-delivery {
   display: flex;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
-#rates .country-rates {
-  position: absolute;
-  z-index: 110;
-}
 #rates .country-img {
   width: 100%;
-  height: 10rem;
-  background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(https://starex.az/_next/static/image/assets/images/tariff-cover.298b3f915b038ef1b1128a33e02beb83.png);
+  background-image: url(https://starex.az/_next/static/image/assets/images/tariff-cover.298b3f915b038ef1b1128a33e02beb83.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position:  relative;
+  text-align: center;
+  height: 20rem;
+  color: white;
+  align-items: center;
+  align-content: center;
 }
 #rates .input {
   display: flex;
@@ -31,4 +29,19 @@
 }
 #rates p {
   font-size: 1.2rem;
+}
+#rates .flag-center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+#rates .country {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  margin: 1rem;
+  border: 1px solid white;
+  border-radius: 3px;
+  height: 2rem;
+  padding: 0 0.5rem;
 }/*# sourceMappingURL=rates.css.map */
