--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 footer {
   background-color: #EDEEEF;
 }
@@ -589,18 +588,17 @@ header li a {
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
-#rates .country-rates {
-  position: absolute;
-  z-index: 110;
-}
 #rates .country-img {
   width: 100%;
-  height: 100vh;
-  background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../../images/310936676_705737237436043_263632807180029271_n.jpg);
+  background-image: url(https://starex.az/_next/static/image/assets/images/tariff-cover.298b3f915b038ef1b1128a33e02beb83.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position:  relative;
+  text-align: center;
+  height: 20rem;
+  color: white;
+  align-items: center;
+  align-content: center;
 }
 #rates .input {
   display: flex;
@@ -616,6 +614,81 @@ header li a {
 }
 #rates p {
   font-size: 1.2rem;
+}
+#rates .flag-center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+#rates .country {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  margin: 1rem;
+  border: 1px solid white;
+  border-radius: 3px;
+  height: 2rem;
+  padding: 0 0.5rem;
+}
+
+#delivery-about .weight {
+  background-color: white;
+  font-size: 1.2rem;
+  margin: 1rem;
+  border-radius: 0.3rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+#delivery-about p {
+  padding: 1.5rem 1.5rem;
+}
+#delivery-about .container {
+  background-color: #F5F5F5;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+#contact-title h2 {
+  font-size: 2.4rem;
+}
+#contact-title p {
+  font-size: 1.2rem;
+  padding-top: 1.2rem;
+  line-height: 1.8rem;
+}
+#contact-title .contact-title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: #EDEEEF;
+  padding: 4rem 0;
+}
+#contact-content {
+  font-size: 1.2rem;
+}
+#contact-content .contact-wrapper {
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(171, 170, 170, 0.3);
+  margin-right: 1.3rem;
+  margin-bottom: 1.3rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+#contact-content .contact-wrapper p {
+  padding: 1rem 0 1rem 1rem;
+}
+#contact-content svg {
+  margin-right: 0.5rem;
+  color: #005AFF;
+}
+#contact-content .location {
+  border-radius: 50%;
+  background-color: #EEF8FF;
+  height: 3.8rem;
+  width: 3.8rem;
+  text-align: center;
+  align-content: center;
 }
 
 * {
@@ -661,7 +734,7 @@ footer {
 }
 
 .universal-backround {
-  background-color: #F5F5F5;
+  background-color: #f6f6f6;
 }
 
 .btn-yellow {
@@ -682,6 +755,7 @@ footer {
 .center {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .col-1 {
