--- a/assets/scss/partial/rates/rates.scss
+++ b/assets/scss/partial/rates/rates.scss
@@ -1,29 +1,31 @@
-@import '../../utils/variables';
+
 #rates{
+  
     .country-delivery{
          display: flex;
          margin-bottom: 2rem;
          margin-top: 2rem;
    
     }
-    .country-rates{
-        position: absolute;
-        z-index: 110;
-    }
     .country-img{
         width: 100%;
-        height: 10rem;
-        background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(https://starex.az/_next/static/image/assets/images/tariff-cover.298b3f915b038ef1b1128a33e02beb83.png);
+        background-image: url(https://starex.az/_next/static/image/assets/images/tariff-cover.298b3f915b038ef1b1128a33e02beb83.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        position: relative
+        text-align: center;
+        height: 20rem; 
+        color: white;
+        align-items: center;
+        align-content: center;
+        
     }
     .input{
         display: flex;
         align-items: center; 
         justify-content: center;
         margin-right: 2.5rem;
+        
     }
     label{
         margin-left: 1rem;
@@ -33,7 +35,25 @@
         font-size: 3rem;
     }
     p{
-        font-size: $font-16;
+        font-size: 1.2rem;
+    
+    }
+    .flag-center{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .country{
+        display: flex;
+        align-items: center;
+        align-content: center;
+        margin: 1rem;
+        border: 1px solid white;
+        border-radius: 3px;
+        height: 2rem;
+        padding: 0 .5rem;
+        
     }
 
 }
