--- a/assets/scss/layout/_step-by-step.scss
+++ b/assets/scss/layout/_step-by-step.scss
@@ -10,7 +10,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 4rem;
+            padding: 1rem;
+            
 
             >h4{
                 font-size: $font-19;
@@ -46,12 +47,9 @@
 
     
 }
-@media (min-width: 772px) and (max-width:992px){
-  #step-by-step  .steps{
-        width: 100%;
-        .step-login-order-payment-delivry{
-            width: 50%;
-        }
-    }
+@media (max-width: 992px) and (min-width:767px){
+   #step-by-step {
+    width: 100%;
+   }
 
 }
